--- a/react-facebook-frontend/package.json
+++ b/react-facebook-frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.3",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.12.4",
@@ -21,6 +22,7 @@
     "dayjs": "^1.11.9",
     "emoji-picker-react": "^4.5.2",
     "formik": "^2.4.4",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
